# Halftone

./: .codespellrc  .editorconfig  .gitignore  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  TODO.md  halftone.doap  local.sh  meson.build  pixely.doap  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
build-aux/flatpak/: com.github.tfuxu.halftone.json  com.github.tfuxu.pixely.json  io.github.tfuxu.Halftone.json  pypi-dependencies.json
data/: com.github.tfuxu.halftone.appdata.xml.in.in  com.github.tfuxu.pixely.appdata.xml.in.in  com.github.tfuxu.pixely.desktop.in.in  com.github.tfuxu.pixely.gschema.xml.in  halftone.gresource.xml  io.github.tfuxu.Halftone.appdata.xml.in.in  io.github.tfuxu.Halftone.desktop.in.in  io.github.tfuxu.Halftone.gschema.xml.in  io.github.tfuxu.Halftone.metainfo.xml.in.in  meson.build  pixely.gresource.xml  style-dark.css  style.css
data/ui/: dither_page.blp  error_page.blp  help_overlay.blp  image_options_view.blp  image_view.blp  main_window.blp  meson.build  preferences_window.blp  report_page.blp  shortcuts_dialog.blp
halftone/: __builtins__.pyi  constants.in  halftone.in  main.py  meson.build
halftone/backend/: logger.py  magick.py
halftone/backend/model/: image_options.py  output_options.py
halftone/backend/utils/: filetypes.py  image.py  temp.py
halftone/utils/: filters.py  killable_thread.py
halftone/views/: __init__.py  about_dialog.py  about_window.py  dither_page.py  error_page.py  image.py  image_options_view.py  image_view.py  main_window.py  preferences_window.py  report_page.py
pixely/: main.py  meson.build  pixely.in
pixely/backend/: magick.py
pixely/backend/utils/: image.py
pixely/views/: about_window.py  dither_page.py  main_window.py  preferences_window.py  report_page.py
po/: LINGUAS  POTFILES  bg.po  de.po  halftone.pot  hi.po  it.po  kw.po  meson.build  nb.po  nl.po  oc.po  pixely.pot  pl.po  pt_BR.po  ru.po  sk.po  tr.po  uk.po  zh_CN.po
